[package]
name = "tracing-test-macro-tests"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/dbrgn/tracing-test"
description = "Only used for internal testing, don't publish."
publish = false

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-test = { path = "../tracing-test" }
