[package]
name = "tracing-test"
version = "0.2.4"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/dbrgn/tracing-test"
description = """
Helper functions and macros that allow for easier testing of crates that use `tracing`.
"""
readme = "../README.md"
categories = ["development-tools::testing"]

[dependencies]
lazy_static = "1.4"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test-macro = { path = "../tracing-test-macro", version = "0.2.4" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } # Used for doctests
tracing = { version = "0.1", default-features = false, features = ["std"] }

[badges]
maintenance = { status = "experimental" }

[features]
# Disable hardcoded env filter
no-env-filter = ["tracing-test-macro/no-env-filter"]
# Increase compatibility with llvm-cov.
# This prevents `#[traced_tests]` from showing up as uncovered.
# Note that this requires `#![cfg_attr(coverage_nightly, feature(coverage_attribute))]`
# to be added to user crates.
llvm-cov-compat = ["tracing-test-macro/llvm-cov-compat"]
